these_pasteur/exemples/EsteRML/test/good/loop2.strl
loop
  signal s in
    present s then print "ERROR" else print "OK" end;
    pause;
    emit s
  end
end.