these_pasteur/exemples/EsteRML/test/bad/berry2.strl
%Berry:1996a p.41, P12
signal O in
  present O then emit O else emit O end
end.